# AsteroidsRayLib

./: .gitignore  AsteroidsRayLib.sln  AsteroidsRayLib.vcxproj  AsteroidsRayLib.vcxproj.filters  CMakeLists.txt  EntityTemplate.cpp  EntityTemplate.h  Movable.cpp  Movable.h  README.md  SaveManager.cpp  SaveManager.h
AsteroidsRayLib/x64/Debug/: AsteroidsRayLib.exe.recipe  AsteroidsRayLib.ilk  vc143.idb
AsteroidsRayLib/x64/Debug/AsteroidsRayLib.tlog/: AsteroidsRayLib.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: Main.cpp
src/Header/: Asteroid.h  Asteroids.h  AsteroidsManager.h  EntityTemplate.h  GameManager.h  GlobalManagerTemplate.h  InputManager.h  Movable.h  Player.h  PlayerLazerProjectile.h  PlayerLazerProjectileManager.h  Projectile.h  ProjectileManager.h  SaveManager.h  ScoreManager.h  ShootMeBtnEntity.h  SoundManager.h  UIManager.h
src/Source/: .Asteroid.cpp.kate-swp  Asteroid.cpp  AsteroidsManager.cpp  EntityTemplate.cpp  GameManager.cpp  Main.cpp  Movable.cpp  Player.cpp  PlayerLazerProjectile.cpp  PlayerLazerProjectileManager.cpp  Projectile.cpp  ProjectileManager.cpp  SaveManager.cpp  ScoreManager.cpp  ShootMeBtnEntity.cpp  SoundManager.cpp  UIManager.cpp
